# callagent

./: .env.example  .gitignore  DOCKER.md  Jenkins  POSTGRES_SETUP.md  README.md  config.py  docker-compose.yml  flutter-admin.bat  pubspec.yaml
agent/: .env.example  AGENT.md  Readme.md  bot.py  pcc-deploy.toml  pyproject.toml  requirements.txt  webrtc_bot.py
api/: .dockerignore  BACKEND.md  Dockerfile  Dockerfile.prod  __init__.py  app.py  app2.py  database.py  docker-compose.prod.yml  docker-compose.yml  models.py  requirements.txt  test_gemini.py
api/instance/: callagent.db
backend/: app.py  bridge.py  database.py  models.py  server.py
bot/: .dockerignore  Dockerfile  bot.py  system-prompt.txt
docs/: .$software-architecture.drawio.bkp  BOT.md  DOCS.md  software-architecture.drawio
frontend/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.admin-web  FRONTEND.md  README.md  Systemprompt.txt  docker-compose.yml  flutter-admin.bat  lighthouse-admin-release.bat  pubspec.yaml
frontend/.github/: dependabot.yml
frontend/apps/admin-web/: README.md  pubspec.yaml
frontend/apps/marketing-site/: .dockerignore  .env.example  .gitignore  (+12 more)
frontend/backend/: .dockerignore  .env.example  Dockerfile  README.md  app.py  requirements.txt  state.json
frontend/docker/: nginx-admin.conf
frontend/docs/: CHANGELOG.md  INSTALLATION.md  MVP_FEATURES.md
frontend/lib/: main.dart
frontend/scripts/: lighthouse-admin-release.ps1  strip_flutter_service_worker.py
frontend/web/: index.html  manifest.json
lib/: main.dart
web/: index.html  manifest.json
(+59 files in other folders)
