[project]
name = "twilio-chatbot-dial-in"
version = "0.1.0"
description = "Twilio dial-in example for Pipecat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[webrtc,websocket,OpenAILLMService,openrouter,silero,deepgram,runner,local-smart-turn-v3]",
    "uvicorn"

]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]

[tool.setuptools]
py-modules = ["bot", "webrtc_bot"]